<resources>
    <string name="app_name">Mental Health Monitoring</string>
    <string name="register">User Registration</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="name_hint">Name</string>
    <string name="age_hint">Age\n</string>
    <string name="clear_all">All cleared.</string>
    <string name="invalid_value_name">Invalid name content.</string>
    <string name="invalid_value_age">Invalid age content.</string>
    <string name="name_show">"Name: "</string>
    <string name="idade_show">"Age: "</string>
    <string name="warning_age">Age must be an integer number.</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="mood_log">Mood Log</string>
    <string name="confirm_button">Confirm</string>
    <string name="clear_button">Clear</string>
    <string name="description_tittle">Description</string>
    <string name="description_hint">Description</string>
    <string name="sadness">Sadness</string>
    <string name="anxiety">Anxiety</string>
    <string name="happiness">Happiness</string>
    <string name="anger">Anger</string>
    <string name="description_null">Description cannot be empty.</string>
    <string name="description_show">"Description: "</string>
    <string name="sadness_show">Sadness :</string>
    <string name="anxiety_show">Anxiety :</string>
    <string name="happiness_show">Happiness :</string>
    <string name="anger_show">Anger :</string>
    <string name="emotions_felt">Emotions Felt</string>
    <string name="intensity_of_emotion">Emotion Intensity</string>
    <string name="light">Light</string>
    <string name="moderate">Moderate</string>
    <string name="intense">Intense</string>
    <string name="select_intent">Select an intensity.</string>
    <string name="intensity_emotion_show">"Intensity: "</string>
    <string name="select_emotion">Select at least one emotion.</string>
    <string name="category_day">Day Category</string>
    <string name="work">Work</string>
    <string name="studies">Studies</string>
    <string name="relationships">Relationships</string>
    <string name="health">Health</string>
    <string name="leisure">Leisure</string>
    <string name="category_day_show">"Category: "</string>
    <string name="description_mood">"Mood Description: "</string>
    <string name="textViewIntesity">Intensity</string>
    <string name="textViewEmotion">Emotion</string>
    <string name="textViewCategoy">Category</string>
    <string name="decription_logo">UTFPR Logo</string>
    <string name="authorship">Authorship information:\n\nName: Jefferson Lima Silva\nCourse: Software Engineering\nE-mail: jeffersonlima@alunos.utfpr.edu.br</string>
    <string name="description_app">The app helps users monitor their mental health through daily mood records, emotional crises, triggers, and self-care habits. It assists in self-awareness, emotional organization, and crisis prevention, serving as a complementary support to psychological care.</string>
    <string name="about">About</string>
    <string name="register_buttom">Register</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="register_mood">Mood Registration</string>
    <string name="edit_mood">Edit Mood</string>
    <string name="suggestion">Suggestions</string>
    <string name="order">Sorting</string>
    <string name="restore">Restore Defaults</string>
    <string name="factory_patterns">Settings have been restored to factory defaults.</string>
    <string name="controle_geral">General Control</string>
    <string name="warning">Warning</string>
    <string name="ok">OK</string>
    <string name="not_spinner_value">O spinner Categoria não possui valores!</string>
</resources>
