<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="all">
        <item
            android:id="@+id/menu_item_restore"
            android:checkable="false"
            android:title="@string/restore" />
        <item
            android:id="@+id/menu_item_add"
            android:icon="@drawable/plus"
            android:title="@string/register_buttom"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/menu_item_order"
            android:icon="@drawable/ic_action_ascending"
            android:title="@string/order"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/menu_item_about"
            android:checkable="false"
            android:title="@string/about" />

    </group>
</menu>